[update] html file to remove the Lorem

--- a/index.html
+++ b/index.html
@@ -6,20 +6,24 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Portifolio of Vinicius Mattoso </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="referrer" content="origin">
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<a href="#" class="image avatar"><img src="images/my_files/avatar.jpg" alt="" /></a>
+					<!-- <h1><strong>I am a Strata</strong>, a super simple<br /> -->
+					<!-- responsive site template freebie<br />
+					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
+					<h1>Hi, my name is <strong>Vinicius Mattoso, MSc</strong>.<br />
+					I am a mechanical engineer and <br />
+					I am interested in optimization and artificial intelligence projects for the oil and gas industry.</h1>
 				</div>
 			</header>
 
@@ -29,12 +33,15 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<!-- <h2>Ipsum lorem dolor aliquam ante commodo<br />
+							magna sed accumsan arcu neque.</h2> -->
+							<h1>Vinicius Mattoso, MSc.</h1>
+							<h3>magna sed accumsan arcu neque</h3>	
 						</header>
 						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<!-- <li><a href="#" class="button">Learn More</a></li> -->
+							<li><a href="https://www.linkedin.com/in/vinicius-mattoso/" class="button">Learn More</a></li>
 						</ul>
 					</section>
 
@@ -81,10 +88,10 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>Accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque lorem ipsum dolor.</p>
+						<p>If you want to know more about a project, or want to talk about any of my areas of interest. Please get in touch using the email address below.</p>
 						<div class="row">
-							<div class="col-8 col-12-small">
-								<form method="post" action="#">
+							<!-- <div class="col-8 col-12-small">
+								<form method="post" action="https://formsubmit.co/vinicius_matt@hotmail.com">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -94,23 +101,25 @@
 								<ul class="actions">
 									<li><input type="submit" value="Send Message" /></li>
 								</ul>
-							</div>
+							</div> -->
 							<div class="col-4 col-12-small">
+								
 								<ul class="labeled-icons">
 									<li>
-										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										1234 Somewhere Rd.<br />
-										Nashville, TN 00000<br />
-										United States
+										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
+										<a href="mailto: vinicius_matt@hotmail.com">vinicius_matt@hotmail.com</a>
 									</li>
 									<li>
+										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
+										Brazil.<br />
+										Rio de Janeiro,<br />
+										Rio de Janeiro
+									</li>
+									<!-- <li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
 										000-000-0000
-									</li>
-									<li>
-										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="#">hello@untitled.tld</a>
-									</li>
+									</li> -->
+
 								</ul>
 							</div>
 						</div>
@@ -440,10 +449,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/vinicius-mattoso/" class="icon brands fa-linkedin-in"><span class="label">Linkedin</span></a></li>
+						<li><a href="https://github.com/vinicius-mattoso" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<!-- <li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+						<li><a href="mailto: vinicius_matt@hotmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
