--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
-								<h3>Risus ornare lacinia</h3>
+								<a href="images\my_files\projects\Teaching_python.jpg" class="image fit thumb"><img src="images\my_files\projects\Teaching_python.jpg" alt="" /></a>
+								<h3>Teaching python</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://github.com/vinicius-mattoso?tab=repositories" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
