--- a/index.html
+++ b/index.html
@@ -75,9 +75,12 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images\my_files\projects\Teaching_python.jpg" class="image fit thumb"><img src="images\my_files\projects\Teaching_python.jpg" alt="" /></a>
+								<a href="https://www.google.com/">
+								<a href="images\my_files\projects\Teaching_python.jpg" class="image fit thumb"><img src="images\my_files\projects\Teaching_python.jpg" alt="google.com" /></a>
+								</a>
 								<h3>Teaching python</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://www.linkedin.com/in/vinicius-mattoso/" class="button_thumb">Repository</a>
 							</article>
 						</div>
 						<ul class="actions">
@@ -88,7 +91,8 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Get In Touch</h2>
-						<p>If you want to know more about a project, or want to talk about any of my areas of interest. Please get in touch using the email address below.</p>
+						<p>If you want to know more about a project, or want to talk about any of my areas of interest.</br>
+							 Please get in touch using the email address below.</p>
 						<div class="row">
 							<!-- <div class="col-8 col-12-small">
 								<form method="post" action="https://formsubmit.co/vinicius_matt@hotmail.com">
@@ -111,9 +115,10 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-home"><span class="label">Address</span></h3>
-										Brazil.<br />
 										Rio de Janeiro,<br />
-										Rio de Janeiro
+										Brazil.<br />
+										
+										<!-- Rio de Janeiro -->
 									</li>
 									<!-- <li>
 										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
