--- a/index.html
+++ b/index.html
@@ -49,39 +49,51 @@
 					<section id="two">
 						<h2>Recent Work</h2>
 						<div class="row">
+
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images\my_files\projects\Capa_projeto_final_LUI.png" class="image fit thumb"><img src="images\my_files\projects\Capa_projeto_final_LUI.png" alt="" /></a>
+								<h3>Web Scrape</h3>
+								<p>web scrape of financial data.</p>
+								<a href="https://github.com/vinicius-mattoso/Trabalho_LUI_BI_Master" class="button_thumb">Repository</a>
 							</article>
+
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
+								<a href="images\my_files\projects\Capa_projeto_final_datamining.png" class="image fit thumb"><img src="images\my_files\projects\Capa_projeto_final_datamining.png" alt="" /></a>
+								<h3>Data mining final project</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://github.com/vinicius-mattoso/Projeto_Final_DataMining" class="button_thumb">Repository</a>
 							</article>
+
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
-								<h3>Tortor metus commodo</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images\my_files\projects\send_Diagnosis.jpeg" class="image fit thumb"><img src="images\my_files\projects\send_Diagnosis.jpeg" alt="" /></a>
+								<h3>First Deploy Project</h3>
+								<p>Creation of an application using Flask, to put an ML model into production.</p>
+								<a href="https://github.com/vinicius-mattoso/Sending-Diagnosis" class="button_thumb">Repository</a>
 							</article>
+
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
-								<h3>Quam neque phasellus</h3>
+								<h3>Exploratory Data Analysis (EDA)</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://github.com/vinicius-mattoso/Exploratory-Data-Analysis-EDA-" class="button_thumb">Repository</a>	
 							</article>
+
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
-								<h3>Nunc enim commodo aliquet</h3>
+								<a href="images\my_files\projects\DashBoard.png" class="image fit thumb"><img src="images\my_files\projects\DashBoard.png" alt="" /></a>
+								<h3>Drink Sales in Russia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://github.com/vinicius-mattoso/Dashboard" class="button_thumb">Repository</a>
+								
 							</article>
+
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://www.google.com/">
 								<a href="images\my_files\projects\Teaching_python.jpg" class="image fit thumb"><img src="images\my_files\projects\Teaching_python.jpg" alt="google.com" /></a>
 								</a>
 								<h3>Teaching python</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
-								<a href="https://www.linkedin.com/in/vinicius-mattoso/" class="button_thumb">Repository</a>
+								<a href="https://github.com/vinicius-mattoso/LearningPython" class="button_thumb">Repository</a>
 							</article>
+
 						</div>
 						<ul class="actions">
 							<li><a href="https://github.com/vinicius-mattoso?tab=repositories" class="button">Full Portfolio</a></li>
