--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<!-- <h1><strong>I am a Strata</strong>, a super simple<br /> -->
 					<!-- responsive site template freebie<br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
-					<h1>Hi, my name is <strong>Vinicius Mattoso, MSc</strong>.<br />
-					I am a mechanical engineer and <br />
-					I am interested in optimization and artificial intelligence projects for the oil and gas industry.</h1>
+					<h1>Hi, my name is <strong>Vinicius Mattoso</strong>.<br />
+						I am a mechanical engineer who has a focus on optimization and artificial intelligence projects
+						applied to different industries, mainly for the oil and gas industry.</h1>
 				</div>
 			</header>
 
@@ -36,9 +36,13 @@
 							<!-- <h2>Ipsum lorem dolor aliquam ante commodo<br />
 							magna sed accumsan arcu neque.</h2> -->
 							<h1>Vinicius Mattoso, MSc.</h1>
-							<h3>magna sed accumsan arcu neque</h3>	
+							<h3>M.Sc. in Mechanical engineering<br/>
+								with a focus on optimization and machine learning problems</h3>	
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I am a master in mechanical engineering from <a href="https://www.mec.puc-rio.br/"><strong>PUC-Rio</strong></a> with a MBA (<a href="https://ica.puc-rio.ai/bimaster/"><strong>BI-Master</strong></a>) focused on data science.
+							I have been working since 2019 in development projects aimed at the oil and gas industry. These projects required knowledge of software development, data treatment and modeling, creation of forecast models and optimization models.<br/>
+							I am currently working as a researcher at <a href="http://lmmp.mec.puc-rio.br/lmmp/"><strong>LMMP</strong></a> on a project to develop reservoir simulators and create optimization models for characterizing reservoir properties based on time series measured during the oil exploration process.
+						</p>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Learn More</a></li> -->
 							<li><a href="https://www.linkedin.com/in/vinicius-mattoso/" class="button">Learn More</a></li>
@@ -52,36 +56,36 @@
 
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images\my_files\projects\Capa_projeto_final_LUI.png" class="image fit thumb"><img src="images\my_files\projects\Capa_projeto_final_LUI.png" alt="" /></a>
-								<h3>Web Scrape</h3>
-								<p>web scrape of financial data.</p>
+								<h3>Web Scraper</h3>
+								<p>Extraction of data from real estate funds to serve as a source of information for decision making.</p>
 								<a href="https://github.com/vinicius-mattoso/Trabalho_LUI_BI_Master" class="button_thumb">Repository</a>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images\my_files\projects\Capa_projeto_final_datamining.png" class="image fit thumb"><img src="images\my_files\projects\Capa_projeto_final_datamining.png" alt="" /></a>
 								<h3>Data mining final project</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Data Mining project that used the SUS database to make graphical analyzes of patients and forecast models of the patient's condition.</p>
 								<a href="https://github.com/vinicius-mattoso/Projeto_Final_DataMining" class="button_thumb">Repository</a>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images\my_files\projects\send_Diagnosis.jpeg" class="image fit thumb"><img src="images\my_files\projects\send_Diagnosis.jpeg" alt="" /></a>
+								<a href="images\my_files\projects\send_Diagnosis.jpeg" class="image fit thumb"><img src="images\my_files\projects\Diagnosis.png" alt="" /></a>
 								<h3>First Deploy Project</h3>
 								<p>Creation of an application using Flask, to put an ML model into production.</p>
 								<a href="https://github.com/vinicius-mattoso/Sending-Diagnosis" class="button_thumb">Repository</a>
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="images\my_files\projects\Exploratory data analysis.png" class="image fit thumb"><img src="images\my_files\projects\Exploratory data analysis.png" alt="" /></a>
 								<h3>Exploratory Data Analysis (EDA)</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Repository with different exploratory analysis projects.</p>
 								<a href="https://github.com/vinicius-mattoso/Exploratory-Data-Analysis-EDA-" class="button_thumb">Repository</a>	
 							</article>
 
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images\my_files\projects\DashBoard.png" class="image fit thumb"><img src="images\my_files\projects\DashBoard.png" alt="" /></a>
 								<h3>Drink Sales in Russia</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Dashboard creation to help in the process of managing the sale of alcoholic beverages in Russia, using the plotly to create an interactive dash.</p>
 								<a href="https://github.com/vinicius-mattoso/Dashboard" class="button_thumb">Repository</a>
 								
 							</article>
@@ -90,7 +94,7 @@
 								<a href="images\my_files\projects\Teaching_python.jpg" class="image fit thumb"><img src="images\my_files\projects\Teaching_python.jpg" alt="google.com" /></a>
 								</a>
 								<h3>Teaching python</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<p>Repository created with different notebooks to teach different subjects in python that involve the simulator development environment.</p>
 								<a href="https://github.com/vinicius-mattoso/LearningPython" class="button_thumb">Repository</a>
 							</article>
 
