[update] index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
 						</p>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Learn More</a></li> -->
-							<li><a href="https://www.linkedin.com/in/vinicius-mattoso/" class="button">Learn More</a></li>
+							<li><a href="https://www.linkedin.com/in/vinicius-mattoso/" class="button">LinkedIn</a></li>
+    							<li><a href="about.html" class="button">Cursos e Formações</a></li>
+    							<li><a href="projects.html" class="button">Projects</a></li>
+    							<li><a href="contact.html" class="button">Contact</a></li>
 						</ul>
 					</section>
 
